fix columns alignment

--- a/app/assets/stylesheets/modules/digital.scss
+++ b/app/assets/stylesheets/modules/digital.scss
@@ -133,6 +133,7 @@ $left-column: gs-span(2);
     margin-right: $gs-gutter;
     margin-bottom: $gs-baseline;
     border-top: 1px solid $c-neutral4;
+    vertical-align: top;
 }
 
 // PRICE
